# biweekly-hackery

./: README.md
java/: README.md  build.gradle  settings.gradle.kts
java/app/: build.gradle.kts
java/src/main/java/: Example.java  Scratchpad.java  ScratchpadTwo.java  TextDemo.java
java/src/main/java/elevatorpitch/: Elevator.java  ElevatorState.java  Person.java  PersonState.java  Scratchpad.java  Simulation.java
java/src/main/java/gameofblobs/: GameOfBlobs.java
java/src/main/java/snakegame/: ComputerController.java  ComputerPlayer.java  ComputerUserInputHandler.java  SnakeGame.java
java/src/main/java/talkingclock/: TalkingClock.java
java/src/main/java/worldcup/: WorldCupPrognostication.java
java/src/test/java/testcommon/: EqualityAndHashCodeTester.java
kotlin/: .gitignore  build.gradle  settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/src/main/kotlin/hexed/: HexEd.kt
kotlin/src/test/kotlin/hexed/: HexEdTest.kt
python/minesweeper/: makefile  pyproject.toml
python/minesweeper/src/minesweeper/: __main__.py  app.py  display.py  game.py  grid.py
python/minesweeper/tests/minesweeper/: test_app.py  test_display.py  test_game.py  test_grid.py  test_mocking.py  testcommon.py
python/newsfeed/: .gitignore  feedly.opml  logging.conf  makefile  pyproject.toml
python/newsfeed/src/newsfeed/: __main__.py  app.py  blog.py  feed.py  logging.py  logging_utils.py  utils.py
python/newsfeed/test-data/: failing-file-1.xml  failing-file-2.xml
python/newsfeed/tests/: test_console.py
python/newsfeed/tests/newsfeed/: test_app.py  test_feed.py  test_utils.py
scala/: .gitignore  build.sbt
scala/src/main/resources/markvshaney/: right-ho-jeeves.txt  the-dunwich-horror.txt  the-shunned-house.txt
scala/src/main/scala/cheatinghangman/: CheatingHangman.scala
scala/src/main/scala/cribbage/: Cribbage.scala
scala/src/main/scala/markvshaney/: MarkVShaney.scala
scala/src/main/scala/mastermind/: Mastermind.scala
(+167 files in other folders)
